--- a/Tablas.html
+++ b/Tablas.html
@@ -11,11 +11,11 @@
                     <td colspan="2"> Perros </td>
                 </tr>
                 <tr>
-                    <td><img src="husky.jpg"></td>
+                    <td><img src="husky.jpg" alt="imagen de husky"></td>
                     <td><a target="_blank" href="https://es.wikipedia.org/wiki/Husky_siberiano"> Wikipedia Husky</a></td>
                 </tr>
                 <tr>
-                    <td><img src="galgo.jpg"></td>
+                    <td><img src="galgo.jpg" alt="imagen de galgo"></td>
                     <td><a target="_blank" href="https://es.wikipedia.org/wiki/Galgo_espa%C3%B1ol"> Wikipedia Galgo</a></td>
                 </tr>
             </table>
